[package]
name = "wixet-bootstrap"
version = "1.0.1"
edition = "2021"
license-file = "LICENSE"
description = "A simple library to boot basic services in your application"
readme = "README.md"
repository = "https://github.com/wixet-limited/wixet-bootstrap-rs"
homepage = "https://wixet.com"

categories = ["config"]
keywords = ["log", "tokio", "signal", "boot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook-tokio = { version = "0.3.1", features=["futures-v0_3"] }
signal-hook = "0.3.15"
futures = "0.3.28"
log = "0.4.19"
fern = "0.6.2"
anyhow = { version = "1.0.71" }
tokio = { version = "1.28.2", features = ["rt", "macros"] }
flume = "0.10.14"
chrono = { version = "0.4.26"}